--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.0.1",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "vite": "^3.0.7"
