--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
+    "uuid": "^9.0.0",
     "vite": "^3.0.7"
   }
 }
