--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "server": "json-server -w  ./mock/database.json",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/js-cookie": "^3.0.2",
+    "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
+    "js-cookies": "^1.0.4",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
