--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "server": "json-server -w  ./mock/database.json",
     "dev": "vite",
+    "fb": "concurrently \"npm run dev\" \"npm run server\"",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.2",
+    "concurrently": "^7.5.0",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -24,6 +26,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "js-cookies": "^1.0.4",
+    "npm-run-all": "^4.1.5",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.5",
