--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "server": "json-server -w  ./mock/database.json",
+    "server": "json-server-auth -w  ./mock/database.json",
     "dev": "vite",
     "fb": "concurrently \"npm run dev\" \"npm run server\"",
-    "build": "tsc && vite build",
+    "build": "tsc && vite && json-server-auth -w  ./mock/database.json  build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.2",
     "concurrently": "^7.5.0",
+    "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/json-server": "^0.14.4",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.3.3",
@@ -26,6 +29,7 @@
     "@types/uuid": "^8.3.4",
     "@vitejs/plugin-react": "^2.0.1",
     "js-cookies": "^1.0.4",
+    "json-server-auth": "^2.1.0",
     "npm-run-all": "^4.1.5",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^4.2.21",
