--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.2",
+    "axios": "^1.1.3",
     "concurrently": "^7.5.0",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.1",
