--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.1.1",
     "@types/js-cookie": "^3.0.2",
     "axios": "^1.1.3",
     "concurrently": "^7.5.0",
