--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "json-server": "^0.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
